--- a/exercise/index.html
+++ b/exercise/index.html
@@ -41,7 +41,7 @@
     <main>
       <div class="ricerca">
         <h1>How can we help?</h1>
-        <input type="search" placeholder="Search" />
+        <input type="search" placeholder="Search" name="search" />
       </div>
       <div class="info">
         <div class="sezione">
